# NTupleReader

./: README.md
include/: NTRException.h  NTupleReader.h
src/: NTRException.cc  NTupleReader.cc
test/: Makefile.in  configure.ac  tupleReadTest.C
